--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,73 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
+#ejercicioDos{
+    display: none;
+
+}
 
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
+#ejercicioTres{
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
 
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+#ejercicioCuatro{
+    position: fixed;
+    top:0;
+    left: 0;
+}
 
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* Ejercicio 6. */
+    flex-direction: row-reverse;
+}
 
+/* Ejercicio 7. */
 
+#ejercicioSiete{
+    display: flex;
 
-/* Ejercicio 6. */
+}
+
+#elementoUno{
+align-self: flex-end;
+}
+
+#elementoDos{
+align-self: center;
+}
+
+#elementoTres{
+
+}
+
+#elementoCuatro{
+align-self: flex-end;
+}
